--- a/data/templates/pages/index.html
+++ b/data/templates/pages/index.html
@@ -4,11 +4,15 @@
 Clearly
 {% endblock %}
 
+{% block header %}
+<!-- Empty -->
+{% endblock %}
+
 {% block sidebar %}
 <!-- Empty -->
 {% endblock %}
 
-{% block header %}
+{% block footer %}
 <!-- Empty -->
 {% endblock %}
 
