--- a/data/styles/layout/_header.scss
+++ b/data/styles/layout/_header.scss
@@ -1,44 +1,59 @@
 #header {
-    display: flex;
-    flex-shrink: 0;
-    height: 4.5rem;
-    padding: 0 1.5rem;
-    column-gap: 1.5rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
-    border-bottom: 1px solid rgba(64, 64, 64, 0.1);
+    padding: 1rem 2rem;
 
-    & ~ #main {
-        padding-top: unset;
-    }
-
-    .header__menu {
-        font-size: 0.625rem;
-        background: none;
-        cursor: pointer;
-        border-radius: 50%;
-        width: 2rem;
-        height: 2rem;
-    }
-
-    .header__delimiter {
-        width: 1px;
-        height: 1.5rem;
-        background: rgba(64, 64, 64, 0.15);
-    }
-
-    .header__logo {
+    .header__left {
+        justify-self: start;
         display: flex;
-        align-items: center;
-        column-gap: 1rem;
-        font-weight: 400;
-        font-size: 1.25rem;
-        text-decoration: none;
-        color: inherit;
+
+        .left__logo {
+            display: flex;
+            align-items: center;
+            column-gap: 1.325rem;
+            font-weight: 400;
+            font-size: 1.25rem;
+            text-decoration: none;
+            color: inherit;
+        }
+    
+        .left__delimiter {
+            width: 1px;
+            height: 1.5rem;
+            background: rgba(64, 64, 64, 0.15);
+        }
+    
+        .left__name {
+            flex-grow: 1;
+            font-weight: 300;
+            color: #707070;
+        }
     }
 
-    .header__name {
-        flex-grow: 1;
-        font-weight: 300;
-        color: #707070;
+    .header__center {
+        display: flex;
+        justify-self: center;
+        column-gap: 0.75rem;
+
+        .center__item {
+            width: 2.5rem;
+            height: 2.5rem;
+            overflow: hidden;
+            border-radius: 0.75rem;
+            background: rgba(237, 237, 237, 0.72);
+            cursor: pointer;
+            border: none;
+            padding: 0;
+        }
+
+        .center__item:has(img) {
+            outline: 0.5px solid rgba(13, 13, 13, 0.15);
+            outline-offset: -0.5px;
+        }
+    }
+
+    .header__right {
+        justify-self: end;
     }
 }
