--- a/data/styles/pages/_index.scss
+++ b/data/styles/pages/_index.scss
@@ -162,7 +162,7 @@
                             display: flex;
                             min-width: fit-content;
                             column-gap: 0.5rem;
-                            margin-right: 1rem;
+                            margin-right: 2rem;
                             align-items: center;
                             padding: 0.25rem 0.75rem;
                             font-size: 0.85rem;
@@ -179,14 +179,14 @@
                         }
 
                         .item__status {
-                            width: 6.25rem;
+                            width: 10%;
                             display: flex;
                             column-gap: 0.75rem;
                             align-items: center;
                         }
 
                         .item__date {
-                            width: 6.75rem;
+                            width: 10%;
                             color: #707070;
                         }
                     }
