--- a/data/templates/layout/navigation.html
+++ b/data/templates/layout/navigation.html
@@ -1,6 +1,6 @@
 <nav id="navigation" aria-label="Navigation">
     <a class="navigation__logo" href="/">
-        <img src="/static/images/favicon.svg" draggable="false" width="32" height="32">
+        <img src="/static/images/favicon.svg" draggable="false" height="35">
     </a>
     <div class="navigation__list">
         <!-- Menu items -->
