--- a/data/styles/layout/_header.scss
+++ b/data/styles/layout/_header.scss
@@ -1,18 +1,20 @@
 #header {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    padding: 0.75rem 1rem;
     align-items: center;
-    padding: 1rem 2rem;
 
     .header__left {
-        justify-self: start;
         display: flex;
+        column-gap: 1.25rem;
+        justify-self: start;
+        align-items: center;
 
         .left__logo {
             display: flex;
             align-items: center;
-            column-gap: 1.325rem;
-            font-weight: 400;
+            column-gap: 1.25rem;
+            font-weight: 450;
             font-size: 1.25rem;
             text-decoration: none;
             color: inherit;
@@ -41,14 +43,14 @@
             height: 2.5rem;
             overflow: hidden;
             border-radius: 0.75rem;
-            background: rgba(237, 237, 237, 0.72);
+            background: rgba(64, 64, 64, 0.07);
             cursor: pointer;
             border: none;
             padding: 0;
         }
 
         .center__item:has(img) {
-            outline: 0.5px solid rgba(13, 13, 13, 0.15);
+            outline: 0.5px solid rgba(13, 13, 13, 0.2);
             outline-offset: -0.5px;
         }
     }
