--- a/doc/_ext/theme/styles/layout/_header.scss
+++ b/doc/_ext/theme/styles/layout/_header.scss
@@ -35,6 +35,7 @@
             .desktop-menu__logo {
                 display: flex;
                 align-items: center;
+                margin-left: -0.25rem;
             }
     
             .desktop-menu__navigation {
