--- a/data/styles/pages/_index.scss
+++ b/data/styles/pages/_index.scss
@@ -124,10 +124,10 @@
                         margin-bottom: 1rem;
                         font-size: 0.925rem;
                         align-items: center;
-                        column-gap: 1.25rem;
+                        column-gap: 1.5rem;
                         text-decoration: none;
                         border-radius: 1.25rem;
-                        padding: 1rem 2.5rem 1rem 1.125rem;
+                        padding: 1rem 2.5rem 1rem 1.5rem;
                         box-shadow: rgba(64, 64, 64, 0.1) 0px 0px 0px 1px inset;
 
                         transition: all 0.15s cubic-bezier(0,0,.2,1);
@@ -146,8 +146,11 @@
                             width: 45px;
                             height: 45px;
                             display: flex;
+                            flex-shrink: 0;
                             font-size: 0.875rem;
-                            background: rgba(64, 64, 64, 0.065);
+                            background: rgba(64, 64, 64, 0.04);
+                            outline: 0.5px solid rgba(13, 13, 13, 0.2);
+                            outline-offset: -0.5px;
                             border-radius: 50%;
                             align-items: center;
                             justify-content: center;            
@@ -179,14 +182,30 @@
                         }
 
                         .item__status {
-                            width: 10%;
+                            width: 6rem;
                             display: flex;
+                            flex-shrink: 0;
                             column-gap: 0.75rem;
                             align-items: center;
+                            
+                            .status__icon {
+                                width: 0.5rem;
+                                height: 0.5rem;
+                                border-radius: 50%;
+
+                                &--running {
+                                    background: #34d399;
+                                }
+
+                                &--stopped {
+                                    background: #d6d6d6;
+                                }
+                            }
                         }
 
                         .item__date {
-                            width: 10%;
+                            width: 7rem;
+                            flex-shrink: 0;
                             color: #707070;
                         }
                     }
