--- a/data/templates/pages/index.html
+++ b/data/templates/pages/index.html
@@ -8,14 +8,6 @@ Clearly
 <!-- Empty -->
 {% endblock %}
 
-{% block sidebar %}
-<!-- Empty -->
-{% endblock %}
-
-{% block footer %}
-<!-- Empty -->
-{% endblock %}
-
 {% block content %}
 <div class="content__index">
     <div class="index__header">
@@ -108,23 +100,8 @@ Clearly
                     <i class="fa-kit fa-cpu"></i>16 CPU
                     <i class="fa-kit fa-nvidia"></i>RTX 3090
                 </div>
-                <div class="item__status item__status--${container.status.toLowerCase()}">
-                    <svg viewBox="0 0 80 80" fill="none" role="img" xmlns="http://www.w3.org/2000/svg" width="24px" height="24px">
-                        <mask id="mask__marble" maskUnits="userSpaceOnUse" x="0" y="0" width="80" height="80">
-                            <rect width="80" height="80" rx="160" fill="#FFFFFF"></rect>
-                        </mask>
-                        <g mask="url(#mask__marble)"><rect width="80" height="80" fill="#44c2f4"></rect>
-                            <path filter="url(#prefix__filter0_f)" d="M32.414 59.35L50.376 70.5H72.5v-71H33.728L26.5 13.381l19.057 27.08L32.414 59.35z" fill="#6da1f0" transform="translate(2 2) rotate(10 40 40) scale(1.5)"></path>
-                            <path filter="url(#prefix__filter0_f)" d="M22.216 24L0 46.75l14.108 38.129L78 86l-3.081-59.276-22.378 4.005 12.972 20.186-23.35 27.395L22.215 24z" fill="#dee8eb" transform="translate(3 3) rotate(195 40 40) scale(1.5)" style="mix-blend-mode: overlay;"></path>
-                        </g>
-                        <defs>
-                            <filter id="prefix__filter0_f" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                                <feFlood flood-opacity="0" result="BackgroundImageFix"></feFlood>
-                                <feBlend in="SourceGraphic" in2="BackgroundImageFix" result="shape"></feBlend>
-                                <feGaussianBlur stdDeviation="7" result="effect1_foregroundBlur"></feGaussianBlur>
-                            </filter>
-                        </defs>
-                    </svg>
+                <div class="item__status">
+                    <div class="status__icon status__icon--${container.status.toLowerCase()}"></div>
                     ${container.status.replace('Running', 'Active')}
                 </div>
                 <div class="item__date">
