--- a/doc/_ext/theme/styles/components/_slider.scss
+++ b/doc/_ext/theme/styles/components/_slider.scss
@@ -3,6 +3,8 @@
     border-radius: 2rem;
     background: rgba(64, 64, 64, 0.06);
     padding: 5rem 6.5rem 0;
+    max-width: 96rem;
+    margin: 0 auto;
     width: 100%;
 
     .slider__item {
