--- a/data/styles/pages/_studio.scss
+++ b/data/styles/pages/_studio.scss
@@ -6,5 +6,6 @@
         overflow: hidden;
         border-top-left-radius: 0.75rem;
         border-top-right-radius: 0.75rem;
+        background: rgba(64, 64, 64, 0.07);
     }
 }
