--- a/data/templates/layout/header.html
+++ b/data/templates/layout/header.html
@@ -31,6 +31,13 @@
         <button class="center__item">
             <img src="/static/images/browser.svg" draggable="false" width="100%" height="100%">
         </button>
-        <button class="center__item"></button>
+        <button class="center__item">
+            <i class="fa-sharp fa-light fa-plus"></i>
+        </button>
+    </div>
+    <div class="header__right">
+        <button class="right__button">
+            Deploy
+        </button>
     </div>
 </header>
