--- a/data/styles/layout/_header.scss
+++ b/data/styles/layout/_header.scss
@@ -42,6 +42,7 @@
             width: 2.5rem;
             height: 2.5rem;
             overflow: hidden;
+            font-size: 1.25rem;
             border-radius: 0.75rem;
             background: rgba(64, 64, 64, 0.07);
             cursor: pointer;
@@ -59,11 +60,15 @@
         justify-self: end;
 
         .right__button {
-            width: 2.5rem;
+            cursor: pointer;
+            font-weight: 400;
+            font-size: 1rem;
             height: 2.5rem;
-            overflow: hidden;
+            padding: 0 1.25rem;
             border-radius: 0.75rem;
-            background: rgba(64, 64, 64, 0.07);
+            box-shadow: rgba(64, 64, 64, 0.16) 0px 0px 0px 1px inset;
+            background: transparent;
+            border: none;
         }
     }
 }
