--- a/data/styles/pages/_index.scss
+++ b/data/styles/pages/_index.scss
@@ -127,7 +127,7 @@
                         column-gap: 1.5rem;
                         text-decoration: none;
                         border-radius: 1.25rem;
-                        padding: 1rem 2.5rem 1rem 1.5rem;
+                        padding: 1.125rem 2.5rem 1.125rem 1.5rem;
                         box-shadow: rgba(64, 64, 64, 0.1) 0px 0px 0px 1px inset;
 
                         transition: all 0.15s cubic-bezier(0,0,.2,1);
@@ -143,22 +143,22 @@
                         }
 
                         .item__icon {
-                            width: 45px;
-                            height: 45px;
                             display: flex;
+                            width: 2.5rem;
+                            height: 2.5rem;
                             flex-shrink: 0;
-                            font-size: 0.875rem;
-                            background: rgba(64, 64, 64, 0.04);
+                            background: rgba(64, 64, 64, 0.07);
                             outline: 0.5px solid rgba(13, 13, 13, 0.2);
                             outline-offset: -0.5px;
-                            border-radius: 50%;
+                            border-radius: 0.75rem;
                             align-items: center;
-                            justify-content: center;            
+                            justify-content: center;        
                         }
 
                         .item__name {
-                            flex-grow: 1;
                             width: 11rem;
+                            flex-grow: 1;
+                            font-weight: 400;
                         }
                         
                         .item__config {
