--- a/data/styles/pages/_index.scss
+++ b/data/styles/pages/_index.scss
@@ -163,7 +163,7 @@
                             display: flex;
                             min-width: fit-content;
                             column-gap: 0.5rem;
-                            margin-right: 2rem;
+                            margin-right: 1.75rem;
                             align-items: center;
                             padding: 0.25rem 0.75rem;
                             font-size: 0.85rem;
@@ -183,6 +183,7 @@
                             width: 6rem;
                             display: flex;
                             flex-shrink: 0;
+                            font-weight: 400;
                             column-gap: 0.75rem;
                             align-items: center;
                             
@@ -192,7 +193,7 @@
                                 border-radius: 50%;
 
                                 &--running {
-                                    background: #34d399;
+                                    background: currentColor;
                                 }
 
                                 &--stopped {
