--- a/data/templates/layout/header.html
+++ b/data/templates/layout/header.html
@@ -16,6 +16,7 @@
         <button class="center__item">
             <img src="/static/images/terminal.svg" draggable="false" width="100%" height="100%">
         </button>
+        <div class="center__delimiter"></div>
         <button class="center__item">
             <img src="/static/images/vscode.svg" onclick="render(8081)" draggable="false" width="100%" height="100%">
         </button>
