--- a/data/styles/layout/_navigation.scss
+++ b/data/styles/layout/_navigation.scss
@@ -58,7 +58,7 @@
 
             &--active,
             &:active {
-                background: rgba(64, 64, 64, 0.06);
+                background: #f2f2f3;
                 color: inherit !important;
             }
 
