--- a/doc/_ext/theme/styles/layout/_footer.scss
+++ b/doc/_ext/theme/styles/layout/_footer.scss
@@ -1,6 +1,10 @@
 #footer {
     background: rgb(20, 20, 20);
 
+    @media (max-width: 768px) {
+        background: transparent;
+    }
+
     &:before {
         content: "";
         width: 100%;
