--- a/doc/_ext/theme/styles/components/_hero.scss
+++ b/doc/_ext/theme/styles/components/_hero.scss
@@ -15,6 +15,14 @@
         max-width: 56rem;
         margin-bottom: 1.25rem;
 
+        @media (max-width: 768px) {
+            font-size: 2.5rem;
+            line-height: 3.25rem;
+            font-weight: 600;
+            max-width: 100%;
+            padding: 0 1rem;
+        }
+
         img {
             width: 9rem;
             margin-bottom: -1.75rem;
@@ -30,6 +38,10 @@
         color: #707070;
         margin-bottom: 2.75rem;
         max-width: 39rem;
+
+        @media (max-width: 768px) {
+            padding: 0 1.75rem;
+        }
     }
 
     nav {
