--- a/doc/_ext/theme/styles/components/_slider.scss
+++ b/doc/_ext/theme/styles/components/_slider.scss
@@ -7,13 +7,29 @@
     margin: 0 auto;
     width: 100%;
 
+    @media (max-width: 768px) {
+        height: 27rem;
+        border-radius: 0;
+        margin: 0 -1rem;
+        width: calc(100% + 2rem);
+        padding: 3rem 0 0 3rem;
+    }
+
     .slider__item {
+        height: 100%;
+
         img {
             width: 100%;
             height: 100%;
             object-fit: cover;
+            object-position: left top;
             border-top-left-radius: 1rem;
             border-top-right-radius: 1rem;
+
+            @media (max-width: 768px) {
+                border-top-left-radius: 0.75rem;
+                border-top-right-radius: 0;
+            }
         }
     }
 
