--- a/doc/_ext/theme/styles/main.scss
+++ b/doc/_ext/theme/styles/main.scss
@@ -112,6 +112,10 @@ body {
             margin: 0 auto;
             width: 100%;
             gap: 4rem;
+
+            @media (max-width: 768px) {
+                padding: 0;
+            }
             
             &[orphan] {
                 display: unset;
