Fix margin auto for main content

--- a/doc/_ext/theme/styles/main.scss
+++ b/doc/_ext/theme/styles/main.scss
@@ -96,6 +96,7 @@ body {
 
     #main {
         display: flex;
+        margin: 0 auto;
         max-width: 96rem;
         position: relative;
         flex-direction: column;
