--- a/doc/_ext/theme/styles/components/_calendar.scss
+++ b/doc/_ext/theme/styles/components/_calendar.scss
@@ -1,8 +1,8 @@
 .calendar {
     width: 100%;
-    height: 52rem;
+    min-height: 52rem;
 
     @media (max-width: 768px) {
-        height: 62rem;
+        padding: 5rem 0;
     }
 }
