--- a/doc/_ext/theme/styles/layout/_footer.scss
+++ b/doc/_ext/theme/styles/layout/_footer.scss
@@ -1,24 +1,12 @@
 #footer {
-    background: rgb(20, 20, 20);
-
     @media (max-width: 768px) {
         background: transparent;
     }
 
-    &:before {
-        content: "";
-        width: 100%;
-        height: 2rem;
-        display: block;
-        background: #ffffff;
-        border-bottom-left-radius: 2rem;
-        border-bottom-right-radius: 2rem;
-    }
-
     .footer__container {
         text-align: center;
-        color: rgb(173, 173, 173);
-        font-weight: 350;
+        color: #707070;
+        font-weight: 300;
         padding: 2rem 0;
     }
 }
