--- a/doc/_ext/theme/styles/layout/_header.scss
+++ b/doc/_ext/theme/styles/layout/_header.scss
@@ -148,6 +148,8 @@
                     &:last-child {
                         background: rgb(20, 20, 20);
                         transform: translateY(0.5rem);
+                        box-shadow: inset 0.5px 0.5px 1px rgba(255, 255, 255, 0.5),
+                                    inset -0.5px -0.5px 1px rgba(255, 255, 255, 0.5);
                         pointer-events: none;
                         position: absolute;
                         font-weight: 400;
