--- a/doc/_ext/theme/styles/layout/_header.scss
+++ b/doc/_ext/theme/styles/layout/_header.scss
@@ -28,6 +28,7 @@
             max-width: 100%;
             padding: 0 3rem;
             border-radius: 0;
+            box-shadow: none;
             background: #ffffff;
             backdrop-filter: none;
             
