--- a/doc/_ext/theme/styles/components/_hero.scss
+++ b/doc/_ext/theme/styles/components/_hero.scss
@@ -49,22 +49,21 @@
         column-gap: 1.75rem;
 
         a {
-            display: flex;
-            cursor: pointer;
-            font-weight: 500;
-            align-items: center;
-            column-gap: 0.5rem;
-            position: relative;
-            border-radius: 2rem;
-            line-height: 1.25rem;
-            padding: 0.75rem 1rem;
-            box-shadow: inset 0.5px 0.5px 0px rgba(0, 0, 0, 0.05),
-                        inset -0.5px -0.5px 0px rgba(0, 0, 0, 0.05);
+            box-shadow: rgba(64, 64, 64, 0.24) 0px 0px 0px 1px inset;
             transition: background 0.15s cubic-bezier(0,0,.2,1);
-            background: rgba(237, 237, 237, 0.5);
+            padding: 0.75rem 1rem;
+            line-height: 1.25rem;
+            border-radius: 2rem;
+            position: relative;
+            column-gap: 0.5rem;
+            align-items: center;
+            font-weight: 500;
+            cursor: pointer;
+            display: flex;
+
 
             &:hover {
-                background: rgba(237, 237, 237, 0.85);
+                background: rgba(64, 64, 64, 0.06);
             }
 
             &:first-child {
