--- a/doc/_ext/theme/styles/layout/_header.scss
+++ b/doc/_ext/theme/styles/layout/_header.scss
@@ -15,10 +15,10 @@
         max-width: 28rem;
         align-items: center;
         border-radius: 2rem;
-        margin: 1.5rem auto;
+        margin: 2rem auto;
         padding: 0 1.75rem;
-        box-shadow: inset 0px 0px 3px 1px rgb(255, 255, 255),
-                    0px -0.5px 50px rgba(0, 0, 0, 0.15);
+        box-shadow: inset 0px 0px 3px 1px white,
+                    0px 3px 40px rgba(0, 0, 0, 0.12);
         backdrop-filter: blur(8px);
         background: #f0f0f0a8;
 
