--- a/doc/_ext/theme/styles/components/_slider.scss
+++ b/doc/_ext/theme/styles/components/_slider.scss
@@ -1,8 +1,8 @@
 .slider {
     position: relative;
     border-radius: 2rem;
-    background: radial-gradient(circle at 30% 30%, #9edcf782, #41117126 60%),
-                radial-gradient(circle at 70% 70%, #e6c5fba6, rgb(242, 242, 243) 60%);
+    background: radial-gradient(circle at 30% 30%, rgba(49, 135, 221, 0.51), rgba(27, 189, 216, 0.22) 60%),
+                radial-gradient(circle at 70% 70%, rgba(197, 241, 251, 0.65), rgb(255, 255, 255) 60%);
     padding: 5rem 6.5rem 0;
     margin: 0 auto;
     width: 100%;
