Change design to be more monochromatic

--- a/data/templates/pages/index.html
+++ b/data/templates/pages/index.html
@@ -92,12 +92,12 @@ Clearly
                 <button class="item__more">
                     <i class="fa-kit fa-more"></i>
                 </button>
-                <div style="font-size: 0.875rem;" class="item__icon">
+                <div style="font-size: 0.85rem;" class="item__icon">
                     <i class="fa-kit fa-studio"></i>
                 </div>
                 <div class="item__name">${container.id}</div>
                 <div class="item__config">
-                    <i class="fa-kit fa-cpu"></i>16 CPU
+                    <i class="fa-kit fa-cpu" style="font-size: 0.828rem;"></i>16 CPU
                     <i class="fa-kit fa-nvidia"></i>RTX 3090
                 </div>
                 <div class="item__status">
