--- a/data/styles/layout/_header.scss
+++ b/data/styles/layout/_header.scss
@@ -13,7 +13,7 @@
         .left__logo {
             display: flex;
             align-items: center;
-            column-gap: 1.25rem;
+            column-gap: 1rem;
             font-weight: 450;
             font-size: 1.25rem;
             text-decoration: none;
@@ -29,7 +29,7 @@
         .left__name {
             flex-grow: 1;
             font-weight: 350;
-            color: #707070;
+            color: #646467;
         }
     }
 
@@ -40,14 +40,22 @@
         align-items: center;
 
         .center__item {
+            display: flex;
             width: 2.5rem;
             height: 2.5rem;
-            font-size: 1.5rem;
+            font-size: 1.25rem;
+            justify-content: center;
+            align-items: center;
             border-radius: 0.75rem;
-            background: #f2f2f3;
+            background: #efeff0;
+            color: #64666b;
             cursor: pointer;
             border: none;
             padding: 0;
+
+            &:hover {
+                color: #141414;
+            }
 
             &:last-child {
                 background: transparent;
@@ -70,7 +78,7 @@
             font-size: 1rem;
             height: 2.5rem;
             padding: 0 1.25rem;
-            border-radius: 0.75rem;
+            border-radius: 2rem;
             box-shadow: rgba(64, 64, 64, 0.24) 0px 0px 0px 1px inset;
             transition: background 0.15s cubic-bezier(0, 0, 0.2, 1);
             background: transparent;
