--- a/data/styles/layout/_navigation.scss
+++ b/data/styles/layout/_navigation.scss
@@ -23,7 +23,7 @@
 
         .list__title {
             padding: 0.5rem 0.75rem 0.75rem;
-            color: rgb(112, 112, 112);
+            color: #646467;
             font-weight: 400;
             font-size: 0.875rem;
         }
@@ -53,7 +53,7 @@
             line-height: 1.75rem;
             text-decoration: none;
             padding: 0.5rem 0.75rem;
-            color: rgb(112, 112, 112);
+            color: #646467;
             transition: all 0.15s cubic-bezier(0,0,.2,1);
 
             &--active,
