--- a/data/styles/pages/_index.scss
+++ b/data/styles/pages/_index.scss
@@ -66,7 +66,7 @@
                     padding: 0.5rem 1rem;
                     border-radius: 2rem;
                     display: flex;
-                    color: #707070;
+                    color: #646467;
                     position: relative;
                     font-weight: 450;
                     cursor: pointer;
@@ -127,9 +127,8 @@
                         column-gap: 1.5rem;
                         text-decoration: none;
                         border-radius: 1.25rem;
-                        padding: 1.125rem 2.5rem 1.125rem 1.5rem;
+                        padding: 1rem 2.5rem 1rem 1.5rem;
                         box-shadow: rgba(64, 64, 64, 0.1) 0px 0px 0px 1px inset;
-
                         transition: all 0.15s cubic-bezier(0,0,.2,1);
 
                         &:hover {
@@ -144,13 +143,14 @@
 
                         .item__icon {
                             display: flex;
-                            width: 2.5rem;
-                            height: 2.5rem;
+                            width: 2.75rem;
+                            height: 2.75rem;
                             flex-shrink: 0;
-                            background: #f2f2f3;
-                            border-radius: 0.75rem;
+                            background: #efeff0;
+                            border-radius: 50%;
                             align-items: center;
-                            justify-content: center;        
+                            justify-content: center;
+                            transition: all 0.15s cubic-bezier(0,0,.2,1);   
                         }
 
                         .item__name {
@@ -165,7 +165,7 @@
                             column-gap: 0.5rem;
                             margin-right: 1.75rem;
                             align-items: center;
-                            padding: 0.25rem 0.75rem;
+                            padding: 0.35rem 0.85rem;
                             font-size: 0.85rem;
                             background: #f2f2f3;
                             border-radius: 1rem;
@@ -205,7 +205,7 @@
                         .item__date {
                             width: 7rem;
                             flex-shrink: 0;
-                            color: #707070;
+                            color: #646467;
                         }
                     }
                 }
