--- a/data/templates/layout/header.html
+++ b/data/templates/layout/header.html
@@ -10,31 +10,15 @@
         </div>
     </div>
     <div class="header__center">
-        <button class="center__item">
-            <img src="/static/images/settings.svg" draggable="false" width="100%" height="100%">
-        </button>
-        <button class="center__item">
-            <img src="/static/images/terminal.svg" draggable="false" width="100%" height="100%">
-        </button>
+        <button class="center__item" style="font-size: 1.5rem;"><i class="fa-kit fa-settings"></i></button>
+        <button class="center__item"><i class="fa-kit fa-terminal"></i></button>
         <div class="center__delimiter"></div>
-        <button class="center__item">
-            <img src="/static/images/vscode.svg" onclick="render(8081)" draggable="false" width="100%" height="100%">
-        </button>
-        <button class="center__item">
-            <img src="/static/images/jupyter.svg" draggable="false" width="100%" height="100%">
-        </button>
-        <button class="center__item">
-            <img src="/static/images/tensorboard.svg" draggable="false" width="100%" height="100%">
-        </button>
-        <button class="center__item">
-            <img src="/static/images/cursor.svg" draggable="false" width="100%" height="100%">
-        </button>
-        <button class="center__item">
-            <img src="/static/images/browser.svg" draggable="false" width="100%" height="100%">
-        </button>
-        <button class="center__item">
-            <i class="fa-sharp fa-light fa-plus"></i>
-        </button>
+        <button class="center__item" onclick="render(8081)"><i class="fa-kit fa-vscode"></i></button>
+        <button class="center__item"><i class="fa-kit fa-jupyter"></i></button>
+        <button class="center__item"><i class="fa-kit fa-tensorboard"></i></button>
+        <button class="center__item" style="font-size: 1.35rem;"><i class="fa-kit fa-cursor"></i></button>
+        <button class="center__item"><i class="fa-kit fa-browser"></i></button>
+        <button class="center__item"><i class="fa-sharp fa-light fa-plus"></i></button>
     </div>
     <div class="header__right">
         <button class="right__button">
