--- a/doc/_ext/theme/styles/main.scss
+++ b/doc/_ext/theme/styles/main.scss
@@ -95,6 +95,7 @@ body {
     }
 
     #main {
+        width: 100%;
         display: flex;
         margin: 0 auto;
         max-width: 96rem;
@@ -107,7 +108,7 @@ body {
 
         #content {
             display: grid;
-            grid-template-columns: 240px minmax(0, 1fr);
+            grid-template-columns: 240px minmax(0, 50rem);
             padding: 0 2rem;
             padding-top: 2rem;
             margin: 0 auto;
