Make theme slightly lighter

--- a/doc/_ext/theme/styles/components/_slider.scss
+++ b/doc/_ext/theme/styles/components/_slider.scss
@@ -1,7 +1,7 @@
 .slider {
     position: relative;
     border-radius: 2rem;
-    background: #66676b;
+    background: #eeeef0;
     padding: 5rem 6.5rem 0;
     margin: 0 auto;
     width: 100%;
