--- a/data/styles/pages/_studio.scss
+++ b/data/styles/pages/_studio.scss
@@ -1,10 +1,10 @@
 .content__studio {
     height: 100%;
+    padding: 0 5px 5px 5px;
 
     .studio__content {
         height: 100%;
         overflow: hidden;
-        border-top-left-radius: 0.75rem;
-        border-top-right-radius: 0.75rem;
+        border-radius: 0.75rem;
     }
 }
