Minor design improvements

--- a/data/styles/pages/_index.scss
+++ b/data/styles/pages/_index.scss
@@ -193,11 +193,11 @@
                                 border-radius: 50%;
 
                                 &--running {
-                                    background: currentColor;
+                                    background: #34d399;
                                 }
 
                                 &--stopped {
-                                    background: #d6d6d6;
+                                    background: #bfc0c7;
                                 }
                             }
                         }
