--- a/data/styles/pages/_index.scss
+++ b/data/styles/pages/_index.scss
@@ -143,12 +143,13 @@
 
                         .item__icon {
                             display: flex;
+                            flex-shrink: 0;
                             width: 2.75rem;
                             height: 2.75rem;
-                            flex-shrink: 0;
-                            background: #efeff0;
+                            color: #646467;
                             border-radius: 50%;
                             align-items: center;
+                            background: #efeff0;
                             justify-content: center;
                             transition: all 0.15s cubic-bezier(0,0,.2,1);   
                         }
@@ -161,14 +162,15 @@
                         
                         .item__config {
                             display: flex;
-                            min-width: fit-content;
-                            column-gap: 0.5rem;
-                            margin-right: 1.75rem;
-                            align-items: center;
-                            padding: 0.35rem 0.85rem;
+                            color: #646467;
                             font-size: 0.85rem;
-                            background: #f2f2f3;
+                            column-gap: 0.5rem;
                             border-radius: 1rem;
+                            align-items: center;
+                            background: #f2f2f3;
+                            margin-right: 1.75rem;
+                            min-width: fit-content;
+                            padding: 0.35rem 0.85rem;
 
                             i {
                                 font-size: 0.75rem;
@@ -188,12 +190,12 @@
                             align-items: center;
                             
                             .status__icon {
-                                width: 0.5rem;
-                                height: 0.5rem;
+                                width: 7px;
+                                height: 7px;
                                 border-radius: 50%;
 
                                 &--running {
-                                    background: #34d399;
+                                    background: currentColor;
                                 }
 
                                 &--stopped {
